html and css structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>To-do-website</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="todo-app">
+            <div class="logo_container">
+            <img src="./assets/teste.svg">
+            </div>
+            <h2>Minha Lista</h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="adicione o seu texto">
+                <button onclick="addTask()">Adicionar</button>
+            </div>
+            <ul id="list-container">
+        </div>
+    </div>
 
 <script src="./scripts/script.js"></script>
 </body>
